# hspec-expectations-monadthrow

./: hspec-expectations-monadthrow.cabal  stack.yaml
src/Test/Hspec/Expectations/: Matcher.hs  MonadThrow.hs
test/Test/Hspec/: ExpectationsSpec.hs
